editei as fontes

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@100;400&display=swap');
+
 * {
     margin: 0;
     padding:0;
@@ -146,6 +148,8 @@ cursor: pointer;
  
 }
 .tamanhos h2 {
+    font-family: 'Dancing Script', cursive;
+    font-size: 35px;
   margin: 0px 390px 10px 0px;
 }
 .tamanhos {
@@ -262,8 +266,8 @@ footer li {
         width: 250px;
     }
 
-    .footer3 {
-        
+    .footer1 h2 {
+        font-family: 'Montserrat', helvetica,  sans-serif;
     }
 
     .footer3 li {
@@ -273,13 +277,23 @@ footer li {
     }
     .footer3 h2 {
         text-align: center;
+        font-family: 'Montserrat', helvetica,  sans-serif;
     }
 
     .vallionstech {
+        
         width: 150px;
         border-radius: 40px;
     }
     .footer h2 {
         text-align: center;
-        font-size: 18px;  
+        font-size: 18px; 
+        font-family: 'Montserrat', helvetica,  sans-serif; 
+      }
+
+      .footer2 p {
+        font-family: 'Dancing Script', cursive;
+        font-weight: 800;
+        padding-top: 10px;
+        font-size: 30px;
       }
